Updating to kqbf (#1)
* updating to kqbf